[gd_scene load_steps=2 format=3 uid="uid://cqw4r8ml2x5p3"]

[ext_resource type="Script" uid="uid://c3kcjpl5fcfep" path="res://scripts/ui/Shop.gd" id="1_shop"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07, 0.05, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "Workshop"

[node name="Spacer" type="Control" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrapContainer" type="HBoxContainer" parent="MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScrapIcon" type="Label" parent="MarginContainer/VBox/Header/ScrapContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚öôÔ∏è"

[node name="ScrapLabel" type="Label" parent="MarginContainer/VBox/Header/ScrapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="CardsSection" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="MarginContainer/VBox/CardsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Cards for Sale"

[node name="CardSlots" type="HBoxContainer" parent="MarginContainer/VBox/CardsSection"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ArtifactsSection" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="MarginContainer/VBox/ArtifactsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Artifacts"

[node name="ArtifactSlots" type="HBoxContainer" parent="MarginContainer/VBox/ArtifactsSection"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MergeSection" type="VBoxContainer" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="MarginContainer/VBox/MergeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "‚¨Ü Available Merges"

[node name="MergeSlots" type="HBoxContainer" parent="MarginContainer/VBox/MergeSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -520.0
offset_right = -10.0
offset_bottom = -370.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 2

[node name="ServicesSection" type="VBoxContainer" parent="RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="RightPanel/ServicesSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Services"
horizontal_alignment = 1

[node name="ServiceButtons" type="HBoxContainer" parent="RightPanel/ServicesSection"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RemoveCard" type="VBoxContainer" parent="RightPanel/ServicesSection/ServiceButtons"]
layout_mode = 2

[node name="Button" type="Button" parent="RightPanel/ServicesSection/ServiceButtons/RemoveCard"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "üóëÔ∏è Remove"

[node name="Cost" type="Label" parent="RightPanel/ServicesSection/ServiceButtons/RemoveCard"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "50 Scrap"
horizontal_alignment = 1

[node name="Reroll" type="VBoxContainer" parent="RightPanel/ServicesSection/ServiceButtons"]
layout_mode = 2

[node name="Button" type="Button" parent="RightPanel/ServicesSection/ServiceButtons/Reroll"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "üîÑ Reroll"

[node name="Cost" type="Label" parent="RightPanel/ServicesSection/ServiceButtons/Reroll"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "10 Scrap"
horizontal_alignment = 1

[node name="ViewDeck" type="VBoxContainer" parent="RightPanel/ServicesSection/ServiceButtons"]
layout_mode = 2

[node name="Button" type="Button" parent="RightPanel/ServicesSection/ServiceButtons/ViewDeck"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "üìö Deck"

[node name="Label" type="Label" parent="RightPanel/ServicesSection/ServiceButtons/ViewDeck"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "View Cards"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="RightPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Start Next Wave"

[node name="DeckViewPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="DeckViewPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="DeckViewPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select Card to Remove"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="DeckViewPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckGrid" type="GridContainer" parent="DeckViewPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="CloseButton" type="Button" parent="DeckViewPanel/VBox"]
layout_mode = 2
text = "Cancel"

[node name="CardCollectionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -360.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="CardCollectionPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CollectionTitle" type="Label" parent="CardCollectionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_font_sizes/font_size = 14
text = "üìö YOUR DECK (0 cards)"
horizontal_alignment = 1

[node name="CardScroll" type="ScrollContainer" parent="CardCollectionPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="CardsContainer" type="Control" parent="CardCollectionPanel/VBox/CardScroll"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="RightPanel/ServicesSection/ServiceButtons/RemoveCard/Button" to="." method="_on_remove_card_pressed"]
[connection signal="pressed" from="RightPanel/ServicesSection/ServiceButtons/Reroll/Button" to="." method="_on_reroll_pressed"]
[connection signal="pressed" from="RightPanel/ServicesSection/ServiceButtons/ViewDeck/Button" to="." method="_on_view_deck_pressed"]
[connection signal="pressed" from="RightPanel/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="DeckViewPanel/VBox/CloseButton" to="." method="_on_deck_view_close"]
